--- a/projectfirst/project1/src/app/footer/footer.component.html
+++ b/projectfirst/project1/src/app/footer/footer.component.html
@@ -1,25 +1,3 @@
-<div class="footer">
-    <div class="text_footer row">
-       <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 container">
-         <p> The web-site is done by Natallia Rak<br>
-           Job suggestions write on codeforjava@gmail.com
-        </p>
-      </div>
-      <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 container">
-        <ul class="social">
-          <li> <a href="#"><i class="fab fa-facebook-f"></i></a>
-          </li>
-          <li> <a href="#"><i class="fab fa-google-plus-g"></i></a>
-          </li>
-          <li> <a href="#"><i class="fab fa-twitter"></i></a>
-          </li>
-          <li> <a href="#"><i class="fab fa-pinterest-p"></i></a>
-          </li>
-          <li> <a href="#"><i class="fab fa-behance"></i></a>
-          </li>
-          <li> <a href="#"><i class="fab fa-instagram"></i></a>
-          </li>
-        </ul>
-      </div>
-    </div>
- </div>
+<nav class= "navbar navbar-expand-lg navbar-dark bg-info text-light">
+ <p>Task Assignment of java </p>
+</nav>
