--- a/projectfirst/project1/src/app/allusers/allusers.component.html
+++ b/projectfirst/project1/src/app/allusers/allusers.component.html
@@ -7,8 +7,7 @@
                     <td>First Name</td>
                     <td>Last Name</td>
                     <td>Age</td>
-                    <td>Password</td>
-                    <td>Remove User</td>
+                    <td>Action</td>
                 </tr>
             </thead>
             <tbody>
@@ -17,8 +16,7 @@
                     <td>{{user.firstname}}</td>
                     <td>{{user.lastname}}</td>
                     <td>{{user.age}}</td>
-                    <td>{{user.password}}</td>
-                    <td><button class="btn btn-danger" (click)= "removeUser(user.username)">Delete</button></td>
+                    <td><button class="btn btn-danger mr-3" (click)= "removeUser(user.username)">Delete</button>
                 </tr>
             </tbody>
         </table>
