--- a/projectfirst/project1/src/app/header/header.component.html
+++ b/projectfirst/project1/src/app/header/header.component.html
@@ -14,6 +14,9 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="Register">Register</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="update">update</a>
+            </li>
         </ul>
     </div>
 </nav>
